# tether

./: README.md
boards/tether-c6-ble/: .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
boards/tether-c6-ble/components/ble/: .gitignore  CMakeLists.txt  ble_tether.c  ble_tether.h
boards/tether-c6-ble/components/ble/accelerometer/: CMakeLists.txt  ble_accel.c  ble_accel.h
boards/tether-c6-ble/components/ble/filter/: CMakeLists.txt  ble_rssi_buff.c  ble_rssi_buff.h
boards/tether-c6-ble/components/sdio-slave/: CMakeLists.txt  tether_sdio_cmd.c  tether_sdio_cmd.h  tether_sdio_events.c  tether_sdio_events.h  tether_sdio_proto.h  tether_sdio_slave.c  tether_sdio_slave.h
boards/tether-c6-ble/components/tether_config/: CMakeLists.txt  tether_slave_cfg.h
boards/tether-c6-ble/main/: CMakeLists.txt  app_main.c
boards/tether-p4-main/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  tether.code-workspace
boards/tether-p4-main/components/audio/: CMakeLists.txt  audio.c  audio.h
boards/tether-p4-main/components/bsp_extra/: CMakeLists.txt
boards/tether-p4-main/components/cjson/: CMakeLists.txt
boards/tether-p4-main/components/proximity-alg/: CMakeLists.txt  device_scan.c  device_scan.h
boards/tether-p4-main/components/sdio-master/: CMakeLists.txt  idf_component.yml  sdio_master.c  sdio_master.h  tether_sdio_proto.h
boards/tether-p4-main/components/storage/: CMakeLists.txt
boards/tether-p4-main/components/storage/include/: CMakeLists.txt  TEST_schedule.h  clock.h  models.h  schedule.h  storage_test.h  store.h  tag.h
boards/tether-p4-main/components/storage/src/: TEST_schedule.c  clock.c  schedule.c  storage_test.c  store.c  tag.c
boards/tether-p4-main/components/tether-ble/: CMakeLists.txt  tether_ble.c  tether_ble.h
boards/tether-p4-main/components/tether-ble-console/: CMakeLists.txt  tether_ble_console.c  tether_ble_console.h
boards/tether-p4-main/components/tether_config/: CMakeLists.txt  tether_config.h
boards/tether-p4-main/components/tof_state/: CMakeLists.txt  tof_state.c  tof_state.h
boards/tether-p4-main/components/ui/: CMakeLists.txt
boards/tether-p4-main/components/ui/include/: screen_manager.h  sdio_event.h  tether.h  theme.h
boards/tether-p4-main/components/ui/src/: screen_manager.c  sdio_event.c  theme.c
boards/tether-p4-main/components/ui/src/images/: allgood.c  images.h  missing.c  settings.c  warning.c
boards/tether-p4-main/components/ui/src/screens/: boot.c  boot.h  home.c  home.h  schedule_edit.c  schedule_edit.h  set_time.c  set_time.h  settings.c  settings.h  tag_edit.c  tag_edit.h  tag_pair.c  tag_pair.h  user_mgmt.c  user_mgmt.h
boards/tether-p4-main/components/vl53l1x/: CMakeLists.txt  VL53L1X_calibration.h  utils.h  vl53l1_platform.c  vl53l1_platform.h
boards/tether-p4-main/components/waveshare__esp32_p4_wifi6_touch_lcd_7b/: CMakeLists.txt  esp32_p4_wifi6_touch_lcd_7b.c
boards/tether-p4-main/docs/: rssi_filtering_test_suite.md
boards/tether-p4-main/main/: CMakeLists.txt  app_main (deprecated).c  idf_component.yml  tether-project.c
boards/tether-tag/: README.md  accel_tag.ino
(+15 files in other folders)
